tests/baselines/reference/symbolDeclarationEmit13(strict=true).errors.txt
symbolDeclarationEmit13.ts(3,9): error TS7032: Property '[Symbol.toStringTag]' implicitly has type 'any', because its set accessor lacks a parameter type annotation.
symbolDeclarationEmit13.ts(3,30): error TS7006: Parameter 'x' implicitly has an 'any' type.


==== symbolDeclarationEmit13.ts (2 errors) ====
    class C {
        get [Symbol.toPrimitive]() { return ""; }
        set [Symbol.toStringTag](x) { }
            ~~~~~~~~~~~~~~~~~~~~
!!! error TS7032: Property '[Symbol.toStringTag]' implicitly has type 'any', because its set accessor lacks a parameter type annotation.
                                 ~
!!! error TS7006: Parameter 'x' implicitly has an 'any' type.
    }